# gnu-indent

./: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README.md  aclocal.m4  bootstrap  config.h  config.h.in  config.status  configure  configure.ac
doc/: Makefile  Makefile.am  Makefile.in  indent.info  indent.texi  version.texi
intl/: Makefile
man/: Makefile  Makefile.am  Makefile.in  indent.1  texinfo2man
po/: LINGUAS  Makefile  Makefile.in  POTFILES  bg.gmo  bg.po  ca.gmo  ca.po  cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  el.gmo  el.po  eo.gmo  eo.po  es.gmo  es.po  et.gmo  et.po  eu.gmo  eu.po  fi.gmo  fi.po  fr.gmo  fr.po  ga.gmo  ga.po  gl.gmo  gl.po  hr.gmo  hr.po  hu.gmo  hu.po  id.gmo  id.po  indent.pot  it.gmo  (+33 more)
regression/: Makefile  TEST
regression/standard/: elipsis-attribute.c  hexadecimal_float.c
src/: Makefile  Makefile.am  Makefile.in  args.c  code_io.c  comments.c  config.h.vc++  gperf-cc.c  gperf.c  handletoken.c  indent.c  indent.gperf  lexi.c  parse.c  sys.h
src/.deps/: args.Po  backup.Po  code_io.Po  comments.Po  globs.Po  handletoken.Po  indent.Po  lexi.Po  output.Po  parse.Po  utils.Po
